// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Page Banner align-left - renders correctly 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--default"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner align-left renders correctly with extra attributes 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--default"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner align-left renders correctly with extra class names 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--default custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner default - renders correctly 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--default ecl-page-banner--centered"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner default renders correctly with extra attributes 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--default ecl-page-banner--centered"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner default renders correctly with extra class names 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--default ecl-page-banner--centered custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner image - renders correctly 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered"
>
  <div
    class="ecl-page-banner__image"
    style="background-image:url(https://v2--europa-component-library.netlify.com/example-image.jpg)"
  />
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner image renders correctly with extra attributes 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-page-banner__image"
    style="background-image:url(https://v2--europa-component-library.netlify.com/example-image.jpg)"
  />
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner image renders correctly with extra class names 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered custom-class custom-class--test"
>
  <div
    class="ecl-page-banner__image"
    style="background-image:url(https://v2--europa-component-library.netlify.com/example-image.jpg)"
  />
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner image-shade - renders correctly 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered"
>
  <div
    class="ecl-page-banner__image"
    style="background-image:url(https://v2--europa-component-library.netlify.com/example-image.jpg)"
  />
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner image-shade renders correctly with extra attributes 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-page-banner__image"
    style="background-image:url(https://v2--europa-component-library.netlify.com/example-image.jpg)"
  />
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner image-shade renders correctly with extra class names 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered custom-class custom-class--test"
>
  <div
    class="ecl-page-banner__image"
    style="background-image:url(https://v2--europa-component-library.netlify.com/example-image.jpg)"
  />
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner primary - renders correctly 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner primary renders correctly with extra attributes 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`EC - Page Banner primary renders correctly with extra class names 1`] = `
<section
  class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-page-banner__container"
  >
    <div
      class="ecl-page-banner__content"
    >
      <h1
        class="ecl-page-banner__title"
      >
        EU Budget for the future
      </h1>
      <button
        class="ecl-button ecl-button--call ecl-page-banner__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label=""
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            focusable="false"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</section>
`;
